# bookstore-api

./: .env  .env.example  .gitignore  Containerfile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: fc3d5abb27c3_create_users_and_books_tables.py
src/bookstore/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
src/bookstore/api/: auth.py  books.py  router.py  users.py
src/bookstore/auth/: jwt.py
src/bookstore/crud/: book.py  user.py
src/bookstore/models/: __init__.py  base.py  book.py  user.py
src/bookstore/schemas/: book.py  user.py
tests/: conftest.py  test_auth.py  test_books.py
